css/styles.css
/************ MOBILE FIRST ************/

/* GENERAL STYLES */

*{
  box-sizing: border-box;
}

body{
  margin: 0;
  color:#444;
  background-color: #fff;
  font-family: 'Lato', sans-serif;
}

.main-wrapper{
  width: 100%;
  display: flex;
  flex-direction: column;
}

ul{
  list-style: none;
  padding: 0;
}

h1,
h2,
h3,
p{
  text-align: center;
}

h2{
  text-transform: uppercase;
  font-size: 1em;
}

h3{
  font-size: 1.4em;
  font-weight: bold;
}


p{
  font-size: 1.3em;
  font-weight:100;
  line-height: 1.4;
}


a{
  text-decoration: none;
}

.main-text{
   color: #a3a3a3;
}

img{
  width: 100%;
  height: auto;
}

/* HEADER STYLES */
header{
  background-color: #fcfbf7;
}

header h1{
  text-align: center;
  font-family: 'Lobster', cursive;
  margin-top: 0;
  padding-top: 20px;
}

nav ul{
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 30px;
}


nav li{
  background-color: #fff;
  text-align: center;
  margin: 5px 0;
  text-transform: uppercase;
  font-weight: 700;
  display: block;
  padding: 10px 0;
}

nav a{
display: block;
padding: 5px 0;
}

/* HOME STYLES */

#home{
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 30px;
  padding: 40px 0;
}

#home .main-text {
  margin: 0;
  padding: 40px 20px 0 40px; /*20px padding + 30px margin = 50px total. aligned with #contact text.*/
}

#home img{
 max-width: 367px;
 max-height: 255px;
 margin: 0 auto;
}

/* PORTFOLIO STYLES */

#portfolio{
  margin: 0 30px;
}

#portfolio h2{
margin: 60px auto;
}

#portfolio h3{
  padding-top: 15px;
}

.grid{
  max-width: 1600px;
  margin: 0 auto;
  display:grid;
  grid-template-columns: repeat(auto-fit,minmax(100%,1fr));
  grid-template-rows: repeat(2,1fr);
  grid-gap: 20px;
}

/* CONTACT STYLES */
#contact{
background-color: #fcfbf7;
padding: 50px 40px; /* padding same as padding + margin #home text. aligned.*/
}

#contact h2{
  padding-bottom: 10px;
}

#contact ul{
  display: flex;
  flex-direction: column;
  align-items: center;
}

#contact li{
  padding: 10px 0;
  font-size: 1.3em;
  color: #a3a3a3;
}

#contact a{
  color: #a3a3a3;
}

/* FOOTER STYLES */
footer{
  margin: 0 20px;
  border-top: 1px solid black;
  padding: 30px 0;
}

footer ul{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

footer li{
  text-transform: uppercase;
  font-weight: 900;
}

.logo-footer{
  font-family: 'Lobster', cursive;
  font-weight: 100;
}

.footer-nav{
  display: none;
}

/* PSEUDO CLASSES */

a:link{
color: black;
}

a:visited{
  color: black;
}

/************ MEDIA QUERIES ************/


@media screen and (min-width: 768px){
  /* HEADER STYLES */
  nav ul{
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  nav li{
    margin: 0 30px;
    background-color: #fcfbf7;
  }

/* HOME STYLES */
  #home{
    flex-direction: row-reverse;
    justify-content: space-between;
    padding-bottom: 70px;
  }

  #home .main-text {
    margin: 0;
    padding: 0 20px 0 0;
    text-align: left;
  }

  .grid{
    grid-template-columns: repeat(auto-fit,minmax(47.396%,1fr)); /* minmax percentage based on 50% minus the 20px grid gap */
  }

  /* CONTACT STYLES */
  #contact{
  padding: 50px 100px;
  }

  /* FOOTER STYLES */
  .mobile-nav{
    display: none;
  }

  footer{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }

  .footer-nav{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
  }

  .footer-nav ul{
    margin: 0;
  }

  .footer-nav li{
    margin: 0 10px;
    padding: 0;
    background-color: #fff;
  }

  .footer-nav li:last-child{
    margin-right: 0;
  }
}


@media screen and (min-width: 1024px){
/* HEADER STYLES */
header{
  max-width: 1600px;
  margin: 0 auto;
}

  header h1{
    display: inline-block;
    margin: 30px;
    text-align: left;
  }

  .header-nav{
    float:right;
    margin: 30px;
  }

  nav ul{
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    margin: 0 30px;
  }


/* HOME STYLES */
  #home{
    display: flex;
    clear: right;
    flex-direction: row-reverse;
    justify-content: space-between;
    margin: 0;
    padding-bottom: 70px;
  }



  .grid{
    grid-template-columns: repeat(3,1fr); /* minmax percentage based on 50% minus the 20px grid gap */
  }

}

